# spam_ham_project

./: .gitignore  LICENSE  app.py  main.py  pyproject.toml  requirements.txt
artifact/04_07_2026_17_46_43/data_transformation/: target_encoder.pkl
artifact/04_07_2026_18_05_48/data_transformation/: x_test.npy
artifact/04_07_2026_18_19_09/data_transformation/: y_train_resampled.npy
artifact/04_07_2026_18_22_56/data_ingestion/: test.csv
artifact/04_07_2026_18_22_56/data_transformation/: y_test.npy
artifact/04_07_2026_18_25_19/data_transformation/: x_test.npy.npz
artifact/04_07_2026_18_28_16/data_transformation/: tfidf_vectorizer.pkl
artifact/04_07_2026_18_28_16/model_trainer/: model.pkl
artifacts/: model.pkl  test.csv  tfidf_vectorizer.pkl
notebook/: code.ipynb  mongo_data_upload.ipynb
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: data_puller.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py  text_preprocessing.py
