[project]
name = "spam-ham-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dill>=0.4.1",
    "dotenv>=0.9.9",
    "fsspec>=2026.2.0",
    "huggingface-hub>=1.7.2",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "nltk>=3.9.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "scikit-learn>=1.8.0",
]
